# wavefitter

./: .gitignore  CMakeLists.txt  README  README.md
cmakeModules/: FindLibconfig.cmake
include/: BlttWsskpf.h  M3bodyAngularBasis.h  MAscoli.h  MChannel.h  MChannelPhysics.h  MCoupledChannelIsobar.h  MDeck.h  MHelicityDeck.h  MIsobar.h  MIsobarChannel.h  MIsobarPiPiS.h  MParKeeper.h  MProductionPhysics.h  MRelationHolder.h  MTwoBodyChannel.h  MatrixInverse.h  MmatrixK.h  NoverD.h  TWigner.h  constants.h  deflib.h  deflib_with_root.h  mstructures.h  waves.h
kmatrix/: CMakeLists.txt  Makefile  background.model.cfg  boost_symm_matrix_test.cc  compass_2-+_3wave.cc  compass_2-+_3wave.v2.cc  continuation.example.5waves.4poles.cfg  continuation.example.pipiS.cfg  model.cfg  model.many.t.cfg  model.pol2.cfg  model.simplest.cfg  read_model_settings.cc  test.cc  test.lambda.cc  test_AMPK.cc  test_Damp.cc  test_Deck.cc  test_Errors.cc  test_First_Deck.cc  test_Fit.cc  test_Fit_ReIm.cc  test_GKPY.cc  test_HelicityDamp.cc  test_HelicityDeck.cc  test_MAscoli.cc  test_MAscoli_2D.cc  test_MAscoli_vs_julia.cc  test_MDeck.cc  test_MHelicityDeck.cc  test_MIsobar.cc  test_MIsobarChannel.cc  test_MIsobarChannelPiPis.cc  test_MPiPiS.cc  test_MProduction.cc  test_MmatrixK.cc  test_ProjectedDeck.2.cc  test_ProjectedDeck.4.cc  test_SecondSheet.OnePole.cc  test_SecondSheet.Quasi.TwoPoles.cc  (+15 more)
kmatrix/configs/: continuation.example.cfg  continuation.example.two-body.cfg  data.0.100000-0.112853.cfg  data.0.112853-0.127471.cfg  data.0.127471-0.144385.cfg  data.0.144385-0.164401.cfg  data.0.164401-0.188816.cfg  data.0.188816-0.219907.cfg  data.0.219907-0.262177.cfg  data.0.262177-0.326380.cfg  data.0.326380-0.448588.cfg  data.0.448588-0.724294.cfg  data.0.724294-1.000000.cfg  data.4waves.allt.I.Re.Im.cfg  data.5waves.I.Re.Im.cfg  data.5waves.allt.I.Re.Im.cfg  data.5waves.t0.cfg  data.all.I.Re.Im.cfg  deck.dima.cfg  generate_relation  model.5waves.2poles.pol2.t0.hadron.cfg  model.5waves.2poles.uDeck100.t0.hadron.cfg  model.5waves.2poles.uDeck5.t0.hadron.cfg  model.5waves.3poles.t0.hadron.cfg  model.5waves.4poles.Deck5.allt.hadron.cfg  model.5waves.4poles.DeckAJ.allt.hadron.strategy.cfg  model.5waves.4poles.t0.hadron.cfg  model.many.t.description.cgf  parameters.t0.cfg  parameters.t1.cfg  parameters.t10.cfg  parameters.t2.cfg  parameters.t3.cfg  parameters.t4.cfg  parameters.t5.cfg  parameters.t6.cfg  parameters.t7.cfg  parameters.t8.cfg  parameters.t9.cfg  relations.4waves.allt.I.Re.Im.cfg  (+1 more)
kmatrix/data/: f2piD.txt  rhopiF.txt  rhopiS.txt
notebooks/: integrals_munich_vs_bonn.ipynb  plot_decomposition_vs_pure_deck.ipynb  run_scripts with_jupyter.ipynb  thresholding_effects.ipynb
scripts/: compare_deck_expansion_and_pure.C  compare_deck_projections.C  compare_decks.C  compare_integrals.C  continue.script  convert_sdm_to_amplitudes.C  create_root_file.C  draw_2pi_vs_3pi_for_mindf.C  draw_data_projection_from_tree.C  draw_distribution_from_tree.C  extraction_of_graphs_from_Mathias.C  extraction_of_graphs_from_Stefan.C  make_sum.C  make_sum_based_on_helicity_projections.C  plotSpinDensity.C  plotSpinDensity_v2.C  plotSpinDensity_v3.C  plot_5x4x5.C  plot_a11420_raw_dalitz.C  plot_a11420_raw_data.C  plot_coherent_sums.C  plot_deck_2D.C  plot_deck_components.C  plot_deck_projections.C  plot_matrix.C  plot_onepp_fnot_sector.C  plot_pietarinen.C  plot_whatever.C  wavefitter.py
simulations/: AngularIntegral.cc  CMakeLists.txt  HitAndMiss.cc  SymmetrizedPhaseSpace.cc  add_weight_MDeck.cc  add_weight_PWs.cc  add_weight_to_complete_tree.cc  add_weight_to_tree.cc  calculate_Deck_projections.cc  calculate_analytical_exact_2d_projections.cc  calculate_analytical_exact_2d_projections_summed_over_helicity.cc  calculate_analytical_projections.cc  calculate_phase_space.cc  cross_check_deck_shape.cc  generate_3pi_angles.cc  generate_3pi_angles_cross_check_with_Stefan.cc  invert_matrix.cc  plot_isobars.cc  test_some_quantities.cc
src/: CMakeLists.txt  M3bodyAngularBasis.cc  MAscoli.cc  MChannel.cc  MChannel.h  MChannelPhysics.cc  MChannelPhysics.h  MCoupledChannelIsobar.cc  MCoupledChannelIsobar.h  MDeck.cc  MDeck.h  MHelicityDeck.cc  MIntegrals.cc  MIsobar.cc  MIsobar.h  MIsobarChannel.cc  MIsobarChannel.h  MIsobarPiPiS.cc  MIsobar_backup.cc  MIsobar_backup.h  MModel.cc  MModel.h  MParKeeper.cc  MParKeeper.h  MProductionPhysics.cc  MProductionPhysics.h  MRelationHolder.cc  MRelationHolder.h  MStructureHolder.cc  MStructureHolder.h  MTwoBodyChannel.cc  MTwoBodyChannel.h  MatrixInverse.cc  MatrixInverse.h  MmatrixK.cc  MmatrixK.h  NoverD.cc  NoverD.cc.arrays  NoverD.h  NoverD.h.arrays  (+9 more)
src/rpwa/: dFunction.hpp  factorial.hpp
ssrt/: Makefile  bw_intensity_fit.cc  combined_fit.cc  combined_fit_C.d  compass_1++.cc  compass_1++_3waves.breit-wigner.backup.cc  compass_1++_3waves.cc  compass_1++_3waves.one_triangle.backup.cc  compass_1++_3waves.two_triangles.backup.cc  compass_NoverD_f2pi.cc  compass_NoverD_f2pi_structured.cc  compass_NoverD_f2pi_structured.cc.to_compare  compass_f2pi.cc  compass_oneNoverD_f2pi.cc  compass_pi.cc  compass_pi_constrained.cc  competition.cc  integration.cc  integration_legendre.cc  integration_play.cc  make_chain.sh  on_fly_combined_fit.cc  plotBasis.cc  plot_second_sheet.cc  simple_bw.cc  test.cc  testCoupledChannel.cc  test_map.C  three_body_fit.cc  two_waves.cc
ssrt/calculations/: sclr_trgl_KstarKTof0pi.out  sclr_trgl_KstarKTof0pi_two_isospin_channels.out  sclr_trgl_rhopiTof0pi.out
ssrt/data/: data1++.txt  data1++.txt.2  data2-+.txt  f0piP.txt  f2piS.txt  phi_f0piP_rhopiS.txt  phi_f2piD_f2piS.txt  phi_rhopiF_f2piD.txt  phi_rhopiF_f2piS.txt
ssrt/data/oliver/: f0piP.oliver.txt  phi_f0piP_rhopiS.oliver.txt  phi_rhopiD_f0piP.oliver.txt  phi_rhopiD_rhopiS.oliver.txt  rhopiD.oliver.txt  rhopiD_f0piP.oliver.txt  rhopiD_rhopiS.oliver.txt  rhopiS.oliver.txt
with_deck/: Rholist.out  Ublist.out
